Don't offset chrome:// page security bubbles.

It breaks the alignment logic under Harmony, and makes the alignment
inconsistent with regular bubbles under non-Harmony.

Note under non-Harmony, the Chrome icon in the bubble will no longer be
directly below the Chrome icon in the Omnibox. This is intentional.

Under Harmony, the icon in the bubble is going away.

BUG=691445

Review-Url: https://codereview.chromium.org/2693833002
Cr-Commit-Position: refs/heads/master@{#452707}