chrome/browser/ui/views/website_settings/website_settings_popup_view.cc
@@ -47,7 +47,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/gfx/image/image.h"
 #include "ui/resources/grit/ui_resources.h"
 #include "ui/views/border.h"
-#include "ui/views/bubble/bubble_frame_view.h"
 #include "ui/views/controls/button/image_button.h"
 #include "ui/views/controls/button/md_text_button.h"
 #include "ui/views/controls/image_view.h"
@@ -171,8 +170,6 @@ class InternalPageInfoPopupView : public views::BubbleDialogDelegateView {
   ~InternalPageInfoPopupView() override;
 
   // views::BubbleDialogDelegateView:
-  views::NonClientFrameView* CreateNonClientFrameView(
-      views::Widget* widget) override;
   void OnWidgetDestroying(views::Widget* widget) override;
   int GetDialogButtons() const override;
 
@@ -325,16 +322,6 @@ InternalPageInfoPopupView::InternalPageInfoPopupView(
 }
 
 InternalPageInfoPopupView::~InternalPageInfoPopupView() {
-}
-
-views::NonClientFrameView* InternalPageInfoPopupView::CreateNonClientFrameView(
-    views::Widget* widget) {
-  views::BubbleFrameView* frame = static_cast<views::BubbleFrameView*>(
-      BubbleDialogDelegateView::CreateNonClientFrameView(widget));
-  // Padding around icon + half of icon width.
-  frame->bubble_border()->set_arrow_offset(
-      kSpacing + 8 + frame->bubble_border()->GetBorderThickness());
-  return frame;
 }
 
 void InternalPageInfoPopupView::OnWidgetDestroying(views::Widget* widget) {
